--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lumière de Noël</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="index.css">
     <style>
       body { margin: 0; background: #000500; overflow: hidden; user-select: none; }
       #root { width: 100vw; height: 100vh; }
@@ -12,6 +13,7 @@
       ::-webkit-scrollbar { display: none; }
     </style>
   <script type="importmap">
+  <script type="module" src="index.tsx"></script>
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -27,7 +29,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
   <body>
     <div id="root"></div>
